Move back to no_std, add textures to DLL

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,9 +9,18 @@ edition = "2021"
 [dependencies]
 libm = "0.2"
 libc = "0.2"
+libc_alloc = "1"
 
 [dev-dependencies]
 macroquad = "0.4"
+
+[build-dependencies.image]
+version = "0.25"
+default-features = false
+features = ["png"]
+
+[profile.dev]
+panic = "abort"
 
 [profile.release]
 panic = "abort"
